--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "angular-2-local-storage": "0.0.23",
     "angular2-file-drop": "0.0.5",
     "angular2-google-maps": "0.15.0",
+    "angular2-infinite-scroll": "^0.2.9",
     "angular2-meteor": "0.7.0",
     "angular2-meteor-accounts-ui": "0.8.0",
     "angular2-meteor-polyfills": "0.1.1",
