--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "meteor-node-stubs": "0.2.3",
     "meteor-rxjs": "0.4.0",
     "meteor-typings": "1.3.1",
+    "moment": "^2.17.1",
     "ng2-pagination": "0.5.1",
     "reflect-metadata": "0.1.8",
     "rxjs": "5.0.0-beta.12",
